--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
     }
   ],
   "require": {
-    "php": "^7.1",
+    "php": "^7.1|^8.0",
     "symfony/polyfill": "^1.27",
     "symfony/var-dumper": "4.*",
     "smarty/smarty": "^4.3"
